2002-12-08  Matthias Clasen  <maclas@gmx.de>

	* gdk-pixbuf-animation.h: 
	* gdk-pixbuf-io.h: Add /*< public|private >*/ markers.

Sat Dec  7 10:14:05 2002  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am (gdk-pixbuf.loaders): Make gdk-pixbuf.loaders
	also depend gdk-pixbuf-query-loaders. (#97096, Daniel Elstner)

2002-12-05  Matthias Clasen  <maclas@gmx.de>

	* io-ico.c: Remove leftover debug output.  (#100357, Owen Taylor)

2002-12-04  Bastien Nocera  <hadess@hadess.net>

	* io-tiff.c: (tiff_image_parse): use G_BIG_ENDIAN instead of
	WORDS_BIGENDIAN which isn't set by configure.in

2002-11-29  Matthias Clasen  <maclas@gmx.de>

	* gdk-pixbuf-animation.c: 
	* gdk-pixbuf.c: Add deprecation docs. 

2002-11-28  Matthias Clasen  <maclas@gmx.de>

	* gdk-pixbuf/gdk-pixbuf-io.c:
	* gdk-pixbuf/gdk-pixbuf-loader.c:
	* gdk-pixbuf/gdk-pixbuf.c: Document 2.2 API additions. I'm not
	going to list all individual functions here; if you want to see
	the list, grep for "Since: 2.2".

Fri Nov  8 19:06:07 2002  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am (gdk-pixbuf.loaders): Make gdk-pixbuf.loaders
	file depend on the loaders (#97096, Jeff Waugh)

Wed Nov  6 15:19:53 2002  Owen Taylor  <otaylor@redhat.com>
 
 	* io-gif.c (CHECK_LZW_SP): Fix trailing semicolon on macro,
 	clean up a bit.
 
2002-11-05  Matthias Clasen  <maclas@gmx.de>

	* gdk-pixbuf-loader.c: Reindent to follow the gdk-pixbuf indentation.  

Tue Nov  5 14:16:17 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk-pixbuf-loader.c (gdk_pixbuf_loader_close): Fix 
	leaked pixbuf reference (#96823, Morten Welinder)

2002-10-23  Matthias Clasen  <maclas@gmx.de>

	* io-gif.c (lzw_read_byte): Check for stack overflow throughout.
	(#91808, Elliot Lee)

2002-10-21  Matthias Clasen  <maclas@gmx.de>

	Support the Netscape application extension for gif animations 
	(#95060):
	
	* io-gif-animation.h: 
	* io-gif-animation.c (gdk_pixbuf_gif_anim_iter_advance): 
	Add loop count to GdkPixbufGifAnim and use it in the advance